# cotizadorV2-worker

./: .env  entry.py  pyproject.toml
app/core/: celery_app.py  config.py  exceptions.py  logger.py
app/infrastructure/http/: client.py  responses.py
app/schemas/: general.py  sale.py
app/services/: base.py  bucket.py  sale.py
app/services/jinja2/: sale.py
app/services/jinja2/templates/: __init__.py  factura.html.j2
app/workers/: sale.py  task.py
docker/: Dockerfile.dev  docker-compose.dev.yml
